--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Attendance System</title>
+  <title>Student Attendance System</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<div class="appname">Smart Attendance System</div>
+<div class="appname">Student Attendance System</div>
 
 <form>
   <div class="container mt-5">
@@ -69,7 +69,7 @@
               <select name="classid" class="form-control" id="classid">
                 <option value="" disabled selected>-- Select Class ID --</option>
                 <option value="101">AIDS</option>
-                <option value="102">AI</option>
+                <option value="102">ECE</option>
                 <option value="103">CSE</option>
                 <option value="104">DS</option>
               </select>
@@ -104,7 +104,7 @@
   toggleFields();
 </script>
 <footer class="text-center mt-5 py-1s" style="background-color: #023246; color: #f6f6f6;">
-  &copy; 2025 Smart Attendance System. All rights reserved.
+  &copy; 2025 Student Attendance System. All rights reserved.
 </footer>
 </body>
 </html>
