--- a/teacherlogin.html
+++ b/teacherlogin.html
@@ -127,7 +127,7 @@
         <i class="bi bi-check-square-fill mb-3"></i>
         <h4>Mark Attendance</h4>
         <p>Start marking today's attendance.</p>
-        <a href="#" class="btn btn-outline-primary">Go</a>
+        <a href="attendance.html" class="btn btn-outline-primary">Go</a>
       </div>
     </div>
     <div class="col-md-4 d-flex">
@@ -135,7 +135,7 @@
         <i class="bi bi-file-earmark-bar-graph-fill mb-3"></i>
         <h4>View Attendance Report</h4>
         <p>Check class attendance reports.</p>
-        <a href="#" class="btn btn-outline-primary">Go</a>
+        <a href="report.html" class="btn btn-outline-primary">Go</a>
       </div>
     </div>
   </div>
