--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 <div class="appname">Student Attendance System</div>
 
 <form>
-  <div class="container mt-5">
+  <div class="container mt-6">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
@@ -106,5 +106,28 @@
 <footer class="text-center mt-5 py-1s" style="background-color: #023246; color: #f6f6f6;">
   &copy; 2025 Student Attendance System. All rights reserved.
 </footer>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBiMw2jFky9giT5QaTgdnaHEmJDZMzxkXY",
+    authDomain: "student-attendance-syste-bf611.firebaseapp.com",
+    projectId: "student-attendance-syste-bf611",
+    storageBucket: "student-attendance-syste-bf611.firebasestorage.app",
+    messagingSenderId: "158541624825",
+    appId: "1:158541624825:web:f3189d8a7a43c4eae57928",
+    measurementId: "G-KD9DKSYBK3"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
