--- a/attendance.html
+++ b/attendance.html
@@ -221,5 +221,28 @@ document.getElementById("confirmSubmitBtn").addEventListener("click", function (
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBiMw2jFky9giT5QaTgdnaHEmJDZMzxkXY",
+    authDomain: "student-attendance-syste-bf611.firebaseapp.com",
+    projectId: "student-attendance-syste-bf611",
+    storageBucket: "student-attendance-syste-bf611.firebasestorage.app",
+    messagingSenderId: "158541624825",
+    appId: "1:158541624825:web:f3189d8a7a43c4eae57928",
+    measurementId: "G-KD9DKSYBK3"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
