--- a/login.html
+++ b/login.html
@@ -87,7 +87,13 @@
     </div>
   </div>
 </form>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script>
+  const supabase = supabase.createClient(
+    'https://your-project-id.supabase.co',  // 🔁 Replace this
+    'your-anon-key'                         // 🔁 Replace this too
+  );
+
   function toggleFields() {
     const userType = document.querySelector('input[name="userType"]:checked').value;
     const teacherIdGroup = document.getElementById("teacherIdGroup");
@@ -102,32 +108,57 @@
     }
   }
   toggleFields();
+
+  // Attach the toggle function to radio button changes
+  document.querySelectorAll('input[name="userType"]').forEach(radio => {
+    radio.addEventListener('change', toggleFields);
+  });
+
+  // Login logic
+  document.querySelector("form").addEventListener("submit", async function(e) {
+    e.preventDefault();
+
+    const userType = document.querySelector('input[name="userType"]:checked').value;
+
+    if (userType === "teacher") {
+      const teacherId = document.getElementById("teacherid").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (!teacherId || !password) {
+        alert("Please enter both Teacher ID and Password.");
+        return;
+      }
+
+      const { data, error } = await supabase
+        .from('teachers')
+        .select('*')
+        .eq('teacherid', teacherId)
+        .eq('password', password)
+        .single();
+
+      if (error || !data) {
+        alert("Invalid Teacher ID or Password.");
+        console.error("Login error:", error);
+      } else {
+        alert("Teacher login successful! Welcome, " + data.name);
+        // window.location.href = "teacher-dashboard.html";
+      }
+
+    } else if (userType === "student") {
+      const classId = document.getElementById("classid").value;
+
+      if (!classId) {
+        alert("Please select a Class ID.");
+        return;
+      }
+
+      alert("Student selected class: " + classId);
+      // window.location.href = "student-page.html?classid=" + classId;
+    }
+  });
 </script>
 <footer class="text-center mt-5 py-1s" style="background-color: #023246; color: #f6f6f6;">
   &copy; 2025 Student Attendance System. All rights reserved.
 </footer>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyBiMw2jFky9giT5QaTgdnaHEmJDZMzxkXY",
-    authDomain: "student-attendance-syste-bf611.firebaseapp.com",
-    projectId: "student-attendance-syste-bf611",
-    storageBucket: "student-attendance-syste-bf611.firebasestorage.app",
-    messagingSenderId: "158541624825",
-    appId: "1:158541624825:web:f3189d8a7a43c4eae57928",
-    measurementId: "G-KD9DKSYBK3"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
 </body>
 </html>
