--- a/index.html
+++ b/index.html
@@ -38,127 +38,150 @@
     background-color: #1e5d7a; /* Slightly darker shade on hover */
     color: #ffffff;
     }
-</style>
+  </style>
 </head>
 <body>
 
-<div class="appname">Student Attendance System</div>
+  <div class="appname">Student Attendance System</div>
 
-<form>
-  <div class="container mt-6">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="text-center mb-4">Login</h3>
+  <form>
+    <div class="container mt-6">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="text-center mb-4">Login</h3>
 
-            <div class="mb-3">
-              <label class="form-label">Teacher</label>
-              <input type="radio" name="userType" value="teacher" checked onchange="toggleFields()">
-              <label class="form-label">Student</label>
-              <input type="radio" name="userType" value="student" onchange="toggleFields()">
+              <div class="mb-3">
+                <label class="form-label">Teacher</label>
+                <input type="radio" name="userType" value="teacher" checked onchange="toggleFields()">
+                <label class="form-label">Student</label>
+                <input type="radio" name="userType" value="student" onchange="toggleFields()">
+              </div>
+              <!-- Add these inside <div class="card-body">, after the radio buttons and before the Login button -->
+
+              <div class="mb-3" id="studentIdGroup" style="display: none;">
+                  <label for="studentid" class="form-label">Student ID</label>
+                  <input type="text" class="form-control" id="studentid" placeholder="Enter your Student ID">
+              </div>
+
+              <div class="mb-3" id="studentNameGroup" style="display: none;">
+                  <label for="studentname" class="form-label">Name</label>
+                  <input type="text" class="form-control" id="studentname" placeholder="Enter your Name">
+              </div>
+
+              <div class="mb-3" id="teacherIdGroup">
+                <label for="teacherid" class="form-label">Teacher ID</label>
+                <input type="text" class="form-control" id="teacherid" placeholder="Enter your Teacher ID">
+              </div>
+
+              <div class="mb-3" id="classIdGroup">
+                <label for="classid" class="form-label">Class ID</label>
+                <select name="classid" class="form-control" id="classid">
+                  <option value="" disabled selected>-- Select Class ID --</option>
+                  <option value="101">AIDS</option>
+                  <option value="102">ECE</option>
+                  <option value="103">CSE</option>
+                  <option value="104">DS</option>
+                </select>
+              </div>
+
+              <div class="mb-3" id="passwordGroup">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+              </div>
+
+              <button type="submit" class="btn w-100 custom-login-btn">Login</button>
             </div>
-
-            <div class="mb-3" id="teacherIdGroup">
-              <label for="teacherid" class="form-label">Teacher ID</label>
-              <input type="text" class="form-control" id="teacherid" placeholder="Enter your Teacher ID">
-            </div>
-
-            <div class="mb-3" id="classIdGroup">
-              <label for="classid" class="form-label">Class ID</label>
-              <select name="classid" class="form-control" id="classid">
-                <option value="" disabled selected>-- Select Class ID --</option>
-                <option value="101">AIDS</option>
-                <option value="102">ECE</option>
-                <option value="103">CSE</option>
-                <option value="104">DS</option>
-              </select>
-            </div>
-
-            <div class="mb-3" id="passwordGroup">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter your password">
-            </div>
-
-            <button type="submit" class="btn w-100 custom-login-btn">Login</button>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</form>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script>
-  const supabase = supabase.createClient(
-    'https://ujnnkoeaaojerowjohgr.supabase.co',  
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVqbm5rb2VhYW9qZXJvd2pvaGdyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE5Nzk0NTAsImV4cCI6MjA2NzU1NTQ1MH0.amjLbde_9oppz9yJRnp_UiMBl52hsutOktaqsgUqOig'
-  );
+  </form>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script>
+    const supabase = supabase.createClient(
+      'https://ujnnkoeaaojerowjohgr.supabase.co',  
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVqbm5rb2VhYW9qZXJvd2pvaGdyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE5Nzk0NTAsImV4cCI6MjA2NzU1NTQ1MH0.amjLbde_9oppz9yJRnp_UiMBl52hsutOktaqsgUqOig'
+    );
 
-  function toggleFields() {
-    const userType = document.querySelector('input[name="userType"]:checked').value;
-    const teacherIdGroup = document.getElementById("teacherIdGroup");
-    const passwordGroup = document.getElementById("passwordGroup");
+    function toggleFields() {
+      const userType = document.querySelector('input[name="userType"]:checked').value;
+      const teacherIdGroup = document.getElementById("teacherIdGroup");
+      const passwordGroup = document.getElementById("passwordGroup");
+      const studentIdGroup = document.getElementById("studentIdGroup");
+      const studentNameGroup = document.getElementById("studentNameGroup");
+      const classIdGroup = document.getElementById("classIdGroup");
 
-    if (userType === "teacher") {
-      teacherIdGroup.style.display = "block";
-      passwordGroup.style.display = "block";
-    } else {
-      teacherIdGroup.style.display = "none";
-      passwordGroup.style.display = "none";
-    }
-  }
-  toggleFields();
-
-  // Attach the toggle function to radio button changes
-  document.querySelectorAll('input[name="userType"]').forEach(radio => {
-    radio.addEventListener('change', toggleFields);
-  });
-
-  // Login logic
-  document.querySelector("form").addEventListener("submit", async function(e) {
-    e.preventDefault();
-
-    const userType = document.querySelector('input[name="userType"]:checked').value;
-
-    if (userType === "teacher") {
-      const teacherId = document.getElementById("teacherid").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      if (!teacherId || !password) {
-        alert("Please enter both Teacher ID and Password.");
-        return;
-      }
-
-      const { data, error } = await supabase
-        .from('teachers')
-        .select('*')
-        .eq('teacherid', teacherId)
-        .eq('password', password)
-        .single();
-
-      if (error || !data) {
-        alert("Invalid Teacher ID or Password.");
-        console.error("Login error:", error);
+      if (userType === "teacher") {
+        teacherIdGroup.style.display = "block";
+        passwordGroup.style.display = "block";
+        studentIdGroup.style.display = "none";
+        studentNameGroup.style.display = "none";
+        classIdGroup.style.display = "block";
       } else {
-        alert("Teacher login successful! Welcome, " + data.name);
-        // window.location.href = "teacher-dashboard.html";
+        teacherIdGroup.style.display = "none";
+        passwordGroup.style.display = "none";
+        studentIdGroup.style.display = "block";
+        studentNameGroup.style.display = "block";
+        classIdGroup.style.display = "block";
       }
-
-    } else if (userType === "student") {
-      const classId = document.getElementById("classid").value;
-
-      if (!classId) {
-        alert("Please select a Class ID.");
-        return;
-      }
-
-      alert("Student selected class: " + classId);
-      // window.location.href = "student-page.html?classid=" + classId;
     }
-  });
-</script>
-<footer class="text-center mt-5 py-1s" style="background-color: #023246; color: #f6f6f6;">
-  &copy; 2025 Student Attendance System. All rights reserved.
-</footer>
+    toggleFields();
+
+    // Attach the toggle function to radio button changes
+    document.querySelectorAll('input[name="userType"]').forEach(radio => {
+      radio.addEventListener('change', toggleFields);
+    });
+
+    // Login logic
+    document.querySelector("form").addEventListener("submit", async function(e) {
+      e.preventDefault();
+
+      const userType = document.querySelector('input[name="userType"]:checked').value;
+
+      if (userType === "teacher") {
+        const teacherId = document.getElementById("teacherid").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        if (!teacherId || !password) {
+          alert("Please enter both Teacher ID and Password.");
+          return;
+        }
+
+        const { data, error } = await supabase
+          .from('teachers')
+          .select('*')
+          .eq('teacherid', teacherId)
+          .eq('password', password)
+          .single();
+
+        if (error || !data) {
+          alert("Invalid Teacher ID or Password.");
+          console.error("Login error:", error);
+        } else {
+          alert("Teacher login successful! Welcome, " + data.name);
+          window.location.href = "teacherlogin.html"; // Redirect to teacher dashboard
+        }
+
+      } else if (userType === "student") {
+          const classId = document.getElementById("classid").value;
+          const studentId = document.getElementById("studentid").value.trim();
+          const studentName = document.getElementById("studentname").value.trim();
+
+          if (!classId || !studentId || !studentName) {
+            alert("Please enter Class ID, Student ID, and Name.");
+            return;
+          }
+
+          // If you want to check against a Supabase students table, add code here
+
+          alert("Student login successful! Welcome, " + studentName);
+          window.location.href = "studentlogin.html?classid=" + classId + "&studentid=" + studentId + "&name=" + encodeURIComponent(studentName);
+      }});
+  </script>
+  <footer class="text-center mt-5 py-1s" style="background-color: #023246; color: #f6f6f6;">
+    &copy; 2025 Student Attendance System. All rights reserved.
+  </footer>
 </body>
 </html>
